=head1 Revision history for Config-Param

=over 2

=item * B<3.000010> (2012-10-04)

More checking of hash keys to make perl -w happy.

=item * B<3.000009> (2012-07-31)

Be more permissive about config file candidates: Everything that exists and is not a directory (makes /dev/fd/x special devices work).

Oh, and examples/par_acceptor_include.conf is now in the distribution.

=item * B<3.000008> (2012-07-30)

=over 2

=item - Fix printout of selected parameter values for paramorama (of course, I managed to break it for its initial purpose while reworking the Param module API).

=item - Fix construction mode for included config files (passing it along now).

=back

=item * B<3.000007> (2012-07-28)

Consistent indent for value in single-parameter help.

=item * B<3.000006> (2012-07-27)

Fixing construction mode of parse_file to really behave as if accept_unknown had been specified (incomplete conditional). This fixes construction from files without full meta data.

Also, documentation got further refinement.

=item * B<3.000005> (2012-07-21)

=over 2

=item - Require Perl 5.8.0 as reliable base for main work and tests.

=item - Require some modules explicitly.

=item - Update POD of paramorama (and add TODO about fully automating that).

=back

=item * B<3.000004> (2012-07-21)

Include parameter types in POD output.

=item * B<3.000003> (2012-07-20)

Some documentation fixes of varying substance.

=item * B<3.000002> (2012-07-20)

And another release without functional changes, cleanup up the documentation and putting the plain text files also into POD format. Nicer lookin on da CPAN web, innit so?

=item * B<3.000001> (2012-07-20)

Whoo! Already an update! Well, it's just a version bump because the first PAUSE upload did not work.

=item * B<3.000000> (2012-07-20)

=over 2

=item - Finally putting things on CPAN after prettifying the code and API cleanup (including the obligatory OO interface).

=item - Some features got added, of course:

=over 2
