@@ -4,8 +4,11 @@ parm1 <<PFFF
 some line without end
 PFFF
 
-parm2 = 7 
+# Vary spacing to get to the point that it doesn't matter.
+parm2= 7
 parm2 *=3
+parm2+=3
+parm2      -=             3
 parm2 += "21"
 
 =include 01-get.t.2.conf
