@@ -1,0 +1,11 @@
+# Config file to test compact array/hash syntax in the mix.
+
+arr  /,/= buff,1,kra
+arr    .= 42
+arr ///.= over/out
+arr / /.= still more
+
+has  /,/= name=fritz,age=172,height=199.9
+has    .= weight=89
+has ///.= state=sleeping/temper=temperate
+has / /.= psi=none handicap=capped_hand
